# robot_capsule_generator

./: .gitignore  CMakeLists.txt  README.md
python/: robot_capsule_urdf  robot_capsule_urdf.py  robot_capsule_urdf_to_rviz
src/: robot_capsule_generator.cpp
